--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section class="header3 cid-qZUhFd2Jxe" id="header3-5" data-bg-video="https://www.youtube.com/watch?v=ujS76etCBAs">
+  <section class="header3 cid-qZUhFd2Jxe mbr-parallax-background" id="header3-5">
 
     
 
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="36" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
+<section class="engine"><a href="https://mobirise.me/r">bootstrap templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="4" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
             <div class=" addons-container-inner">
@@ -67,7 +67,7 @@
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="3025777285.727bfe1.9712d23522484ced9b4fe650dc84cb80" data-per-row-grid="4" id="instagram-feed-block-3" data-rv-view="34" style="background-image: url(assets/images/mbr-1860x1080.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="3025777285.727bfe1.9712d23522484ced9b4fe650dc84cb80" data-per-row-grid="4" id="instagram-feed-block-3" data-rv-view="6" style="background-image: url(assets/images/mbr-1860x1080.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -171,8 +171,7 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/index.js"></script>
   <script src="assets/slick.min.js"></script>
