--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
-    </div>
+    
 
     <div class="container">
         <div class="media-container-row">
@@ -55,7 +54,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">bootstrap templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="4" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
+<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="4" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
             <div class=" addons-container-inner">
