--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">free landing page templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="4" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap html templates</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-4" data-rv-view="4" style="background-color: rgb(0, 0, 0); padding-top: 3rem; padding-bottom: 3rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article addons-container addons-row">
             <div class=" addons-container-inner">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
-                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F183425097&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
+                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F183425097&amp;amp;auto_play=true&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
                 </figure>
             </div>
         <div class="clearfix"></div>
     </div>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="3025777285.727bfe1.9712d23522484ced9b4fe650dc84cb80" data-per-row-grid="4" id="instagram-feed-block-3" data-rv-view="6" style="background-image: url(assets/images/mbr-1860x1080.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="2" data-full-width="" data-token="3025777285.727bfe1.9712d23522484ced9b4fe650dc84cb80" data-per-row-grid="" id="instagram-feed-block-3" data-rv-view="6" style="background-image: url(assets/images/mbr-1860x1080.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -74,7 +74,7 @@
                 <div class="inst">
                     <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram Feed</h1>
                     <div class="inst__content"></div>
-                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
+                    
                 </div>
             </div>
         </div>
