--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-2">
                     Sounds Scapes Scores</h3>
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-5">Music and Visuals of Sam Cape<br>Custom music for your film, video game, or TV show<br>Sound design for your app, game, or music<br>Business and website are under construction<br>CONNECT below to stay tuned for updates<br><br></p>
+                    <p class="mbr-text mbr-fonts-style display-5">Music and Visuals of Sam Cape<br>Custom music for your Film, Video game, or TV show<br>Sound design for your app, game, or music<br>CONNECT below to stay tuned for updates<br><br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="mailto:samuel.cape@gmail.com">Contact for Inquiries</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://www.patreon.com/capedsam">Become a Patreon</a></div>
@@ -54,7 +54,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/p">website templates free download</a></section><section class="mbr-section form1 cid-qZUD4Taj3Q" id="form1-a">
+<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="mbr-section form1 cid-qZUD4Taj3Q" id="form1-a">
 
     
 
@@ -73,7 +73,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">You're the best!  I appreciate you reaching out.  I'll get back with you asap.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EOOqY4n51B/VJGK8RPlI/ko0saVqODpo4vIileJwXthkQxr2Kyyvf+2i94QIW2oWfatvKEMwqo1ZbtcltTzR5FuYGbJpUSuoop5++Dx7OWeYZb2wg2duXVv74jTdm8yK" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dZ81cJNMAKHa0CzOonM7RZSOCyyiCCAfogh+YN1dwQkK3+nBFOLyyqP0nu3jj2eWioFcurr9W4nFF/cSWPlwsbGGmYrdReYYqJxdIR5ReFj+axVQRQIB+cIxfiJ0f1ZE" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
