create github pages

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Film Scores | Video Game Music | Sound Design<br>CONNECT below to stay tuned for updates<br><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="mailto:samuel.cape@gmail.com">Contact for Inquiries</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://www.patreon.com/capedsam">Become a Patreon</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="mailto:samuel.cape@gmail.com">Contact for Inquiries</a></div>
             </div>
         </div>
     </div>
@@ -179,7 +178,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">You're the best!  I appreciate you reaching out.  I'll get back with you asap.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qidzUzJPyeqjZsnaG2UQr0ARxky/OlOmNYXxXNGw0TJiMSbvSPD0p6hyxUG6Hf8Q/FzAXMlfwzn0dFc29pDYFmciMohuY046fiza2sDTULTKpWBAid0GyZRiQ/67vjnu">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mxcyuUShPfK1P3xP6YdfnRImws1DJHTsU++v7IYB/S8ptw5AbN99+5FhBOibeXaFcWV/d9sygmlpXCAHiVavj/oosFcpyj3qYk4o3c7bn5kUNaAY5vouuwggV/AgL7zb">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -356,7 +355,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">The page</a> was started with Mobirise templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Build a site - <a href="https://mobirise.site/v" style="color:#aaa;">Learn more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
