create github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 100%;">
+            <div class="mbr-figure" style="width: 140%;">
                 <a href="https://www.amazon.com/Imago-Bilateral-Transformation-Samuel-Cape/dp/B09JJQLG3H/ref=sr_1_1?crid=28JN393VKU9R9&keywords=samuel+cape&qid=1640146759&sprefix=samuel+cape%2Caps%2C75&sr=8-1"><img src="assets/images/imago-album-cover-2-1014x1014.png" alt="Mobirise"></a>
             </div>
 
@@ -75,8 +75,7 @@
 <br>/iˈmāɡō,iˈmäɡō/
 <br>the final and fully developed adult stage of an insect, typically winged.</p><p></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobiri.se">READ MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://www.instagram.com/capesounds/">CONTACT SAM</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://www.instagram.com/capesounds/">CONTACT SAM</a></div>
             </div>
         </div>
     </div>
@@ -188,7 +187,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">You're the best!  I appreciate you reaching out.  I'll get back with you asap.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m2k7e3es2uk+8XuJUFbqn6aI6wzdvXJLiQ3BpYCnHdpflSU8d1EFU9tCSRbeKbfUfqtXYGY+QcXUvs/v1UmQUQ/mGAG7LOKtkrEmgwx5n0CEgMTrKMT5Xkz4sCVA4rzp">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UAQDw41m98zlZ5yyguYhvQtPK6i/Y04/M3559tlIGjx6Usxrgr3lnEmJ8X2+ivZ0noHcmlcDB4tjPdL76CnK9mNpdx0Wy4LDVvnsj8gwhGBSPELOzOE9cWypKsl+T7Af">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -365,7 +364,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/w" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to set up your own website - <a href="https://mobirise.site/x" style="color:#aaa;">See here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to make your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Check it out</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
