create github pages

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">You're the best!  I appreciate you reaching out.  I'll get back with you asap.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UAQDw41m98zlZ5yyguYhvQtPK6i/Y04/M3559tlIGjx6Usxrgr3lnEmJ8X2+ivZ0noHcmlcDB4tjPdL76CnK9mNpdx0Wy4LDVvnsj8gwhGBSPELOzOE9cWypKsl+T7Af">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rpa0PaspGXb+O0uvVi8ZLSWtreIi6jM3E4cpCkHr1rJ51tM20RGV/VsMYmxkyUbLM/8wI4wjRUgp+CNKO2sMoXDnfLVzXEq8ud6KS3XTyvTBwle2dUt4VY3EscWSVCvy">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -215,7 +215,7 @@
     </div>
 </section>
 
-<section class="features2 cid-qZZVAetgcZ mbr-parallax-background" id="features2-e">
+<section class="features2 cid-qZZVAetgcZ" id="features2-e">
 
     
 
@@ -226,11 +226,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/10392076-600560974063-930240-n-2-604x403.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/207141-1016536456920-4893-n-2-402x604.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Background - Technical and Artistic</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Sam played guitar in multiple Atlanta bands including Dawn of Orion, and Signs of Dying. &nbsp;While studying Electrical and Computer Engineering at Georgia Tech from 1998-2004, he also fervently studied music theory and composition. &nbsp;At one point, he was playing in 5 bands simultaneously in the Atlanta area - exploring many styles and genres as well as composing for saxophone quartet, string quartet, piano, guitar, and woodwind ensembles.&nbsp; He often remixes fragments of old recordings and compositions into new works.</p>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Past</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Dawn of Orion<br>Signs of Dying</p>
                     </div>
                 </div>
             </div>
@@ -241,8 +241,8 @@
                         <a href="https://www.cranecurrency.com/products-services/research-and-development/"><img src="assets/images/screen-edit-from-21-676x613.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box ">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Anti-Counterfeiting Technology</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Immediately after graduating, Sam joined a small technology startup company called Nanoventions and began working on anti-counterfeiting tech for paper currency using completely novel micro-optics systems.&nbsp; He worked alongside the inventors and helped push the boundaries of the technology, build a team of experts, and campaign for the creative development of this technology beyond the status quo of the market. &nbsp;Sam was awarded numerous patents, and his work and the work of the team appears in billions of banknotes around the world.</p>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Present</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Micro-optic security<br>math -&gt; software -&gt; design</p>
                     </div>
                 </div>
             </div>
@@ -254,8 +254,8 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Renewed Passion - Eyephorm</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">After over a decade of "making money" in the currency industry, he has invested in a home studio.&nbsp; Having quickly built a diverse collection of Eurorack synth modules, he looks towards a future of music composition and production.&nbsp; Sam leverages the algorithmic perspective of his Electrical Engineering Background, the rigorous visual sense developed in working with currency, as well as his hand-on musical experience as a guitarist and composer. &nbsp;Now, with a renewed vision, energy and confidence, he is determined to relentlessly pursue the musical-visual aspect of his imagination.&nbsp;</p>
+                            Eyephorm</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Virtually contact free visuals<br>music for brains<br><br><br></p>
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to make your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Check it out</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Design your own <a href="https://mobirise.site/y" style="color:#aaa;">website</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
