create github pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">DEC 2022</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">released Dec 2021</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-7"></p><p>IMAGO - a bilateral journey of transformation<br><br>A 24 minute 4-part opus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;i)&nbsp; &nbsp; &nbsp; ovum<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ii)&nbsp; &nbsp; &nbsp; caterpillar<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;iii)&nbsp; &nbsp; &nbsp; chrysalis<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;iv)&nbsp; &nbsp; &nbsp; butterfly<br>This amazingly rewarding project took nearly 29 months to complete amidst the global pandemic and upheaval of everyday family life.&nbsp; The theme of transformation is embodied in the life cycle of the butterfly - the i·ma·go
@@ -187,7 +187,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">You're the best!  I appreciate you reaching out.  I'll get back with you asap.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yykvYldauQHh+PxpJOJedFiFn1DM5EDbkOk8PH+T66KYbjR1kd+qkkfDYq1e4YCiLDYoeSVIAdfW2KxJBYmhM2WFAh3gonQ2KxzN3RYcW0VDO1uleUzNvwL9dJMrn0q3">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6XN+jTBLu2A4s2BKKIZ1j55wLVZFsV2304RT/KNqFMuR/7BM5/Zy50rJobguDsLF6F+tQUd+uKuvcPgz/uSuWnYwBFZ9G9tW6AcunqjXc+YwoirW8Wx3xUC82+RvP3K5">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -364,7 +364,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website was <a href="https://mobirise.site/g" style="color:#aaa;">built</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web maker - <a href="https://mobirise.site/p" style="color:#aaa;">Find out</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
